--- a/src/sass/gtk3/_drawing.scss
+++ b/src/sass/gtk3/_drawing.scss
@@ -235,11 +235,13 @@
   //
   // pushed button
   //
-    color: $selected_fg_color;
-    outline-color: transparentize($selected_fg_color, 0.7);
-    border-color: $selected_bg_color;
-    background-image: image($selected_bg_color);
-    box-shadow: 0 2px 4px transparentize($selected_bg_color, .75);
+    $_bg: if($c != $bg_color, darken($c, 14%), $selected_bg_color);
+    $_tc: if($c != $bg_color, $tc, $selected_fg_color);
+    color: $_tc;
+    outline-color: transparentize($tc, 0.7);
+    border-color: $_bg;
+    background-image: image($_bg);
+    box-shadow: 0 2px 4px transparentize($_bg, .75);
   }
 
   @else if $t==insensitive {
