GTK3: Fix non-csd titlebar padding

--- a/src/sass/gtk3/_common-tweaks.scss
+++ b/src/sass/gtk3/_common-tweaks.scss
@@ -306,7 +306,10 @@ headerbar {
     button.titlebutton {
       min-height: 0;
       min-width: 0;
-      margin: 0;
+
+      &, &:last-child {
+        margin: 0;
+      }
     }
   }
 }
