--- a/src/sass/gtk3/_applications.scss
+++ b/src/sass/gtk3/_applications.scss
@@ -137,6 +137,7 @@ list.tweak-categories separator {
   button {
     border: 0;
     border-radius: 0;
+    min-width: 30px;
     box-shadow: none;
     text-shadow: none;
     background: transparent;
@@ -150,14 +151,14 @@ list.tweak-categories separator {
 
     &:not(#whiskermenu-button) {
       &:checked, &:active {
-        box-shadow: inset 0 4px 0 $selected_bg_color;
+        box-shadow: inset 0 -2px 0 $selected_bg_color;
         background: $_highlight_bg_color;
       }
     }
   }
 
   &.vertical button:not(#whiskermenu-button) {
-    &:checked, &:active { box-shadow: inset 4px 0 0 $selected_bg_color; }
+    &:checked, &:active { box-shadow: inset 2px 0 0 $selected_bg_color; }
   }
 }
 
@@ -174,6 +175,11 @@ list.tweak-categories separator {
 }
 
 /* Whisker menu */
+#whiskermenu-button image {
+  -gtk-icon-shadow: 0 0 3px $selected_bg_color,
+                    0 0 3px $selected_bg_color;
+}
+
 #whiskermenu-window {
   $_dark_bg: if($variant == 'light', $bg_color, darken($bg_color, 3%));
   entry {
@@ -214,7 +220,7 @@ list.tweak-categories separator {
   }
 }
 
-/* XFCE4 panel action & battery buttons */
+/* XFCE4 panel action */
 #XfcePanelWindowWrapper > widget > box > #xfce-panel-button > image {
   -gtk-icon-style: symbolic;
   -gtk-icon-transform: scale(.7);
