GTK3: remove side borders to dialog windows

--- a/src/sass/gtk3/_common-tweaks.scss
+++ b/src/sass/gtk3/_common-tweaks.scss
@@ -635,6 +635,10 @@ decoration {
   .tiled-bottom &,
   .tiled-left & { border-width: 0; }
 
+  dialog & {
+    border-width: 0 0 4px;
+  }
+
   .popup & { border-width: 0; }
 
   .ssd & {
